tests/negative/neg_pr1113a_duplicate_payload_field.safe
package neg_pr1113a_duplicate_payload_field

   type shape is circle (radius : integer; radius : integer) or idle;
